// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput should adjust input padding and suffix width to match currency symbol width 1`] = `
.circuit-8 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-6 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-6,
label + .circuit-6 {
  margin-top: 4px;
}

.circuit-4 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-0 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 27px !important;
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
  text-align: right;
  padding-right: calc(16px + 27px);
}

.circuit-2:focus,
.circuit-2:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-2::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

<label
  class="circuit-8"
  for="input_2"
>
  <div
    class="circuit-6 circuit-7"
  >
    <span
      class="circuit-0 circuit-1"
    >
      CHF
    </span>
    <input
      aria-invalid="false"
      class="circuit-2 circuit-3"
      id="input_2"
      placeholder="123,45"
      type="text"
      value=""
    />
    <div
      class="circuit-4 circuit-5"
    />
  </div>
</label>
`;

exports[`CurrencyInput should render with default styles 1`] = `
.circuit-8 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-6 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-6,
label + .circuit-6 {
  margin-top: 4px;
}

.circuit-0 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 18px !important;
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
  text-align: right;
  padding-right: calc(16px + 18px);
}

.circuit-2:focus,
.circuit-2:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-2::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-4 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

<label
  class="circuit-8"
  for="input_1"
>
  <div
    class="circuit-6 circuit-7"
  >
    <span
      class="circuit-0 circuit-1"
    >
      $
    </span>
    <input
      aria-invalid="false"
      class="circuit-2 circuit-3"
      id="input_1"
      type="text"
      value=""
    />
    <div
      class="circuit-4 circuit-5"
    />
  </div>
</label>
`;
